ants/static/ants/css/food_overview.css
.food-item-thumb-wrap {
    width: 100%;
}

.food-item-thumb {
    width: 100%;
    height: auto;
    aspect-ratio: 1 / 1;
    object-fit: cover;
    font-size: 3rem;
}

.food-item-thumb-label {
    font-size: 0.75rem;
    margin-top: 0.25rem;
}

@media (min-width: 576px) {
    .food-item-thumb-wrap {
        width: 192px;
    }

    .food-item-thumb {
        width: 192px;
        height: 192px;
    }
}

